--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="App.js" type="module"></script>
+    <script src="./src/App.js" type="module"></script>
   </body>
 </html>
